# rest-api-python

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py  router.py
app/api/v1/: activities.py  buildings.py  organizations.py  routes.py  tasks.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: __init__.py  entities.py
app/seeds/: __init__.py  __main__.py  reference.py
app/services/: activities.py  buildings.py  organizations.py  tasks.py
migrations/: env.py
migrations/versions/: 61580e624291_create_core_tables.py
tests/: conftest.py  factories.py  test_activities.py  test_buildings.py  test_organizations.py  test_tasks.py
