[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rest-api"
version = "0.1.0"
description = "Справочник организаций, зданий и видов деятельности на FastAPI."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "mcstudio_yaroslav"}
]
dependencies = [
  "fastapi>=0.121.1",
  "uvicorn[standard]>=0.38.0",
  "pydantic>=2.12.4",
  "pydantic-settings>=2.12.0",
  "SQLAlchemy>=2.0.44",
  "alembic>=1.17.1",
  "aiosqlite>=0.21.0",
  "greenlet>=3.0",
  "python-multipart>=0.0.20"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "anyio>=4.11.0",
  "ruff>=0.14.4"
]

[tool.setuptools.packages.find]
where = ["app"]
